# ppc_hw_2024

./: .gitignore  README.md
hw/01/: CMakeLists.txt  config
hw/01/include/: Config.h  ConfigReader.h  InputFormat.h  InputPreparator.h  InputStreamReader.h  Table.h  TableReader.h
hw/01/src/: Config.cpp  ConfigReader.cpp  InputStreamReader.cpp  Inputpreparator.cpp  StreamPreparator.cpp  Table.cpp  TableReader.cpp  config  main.cpp
hw/01_temp/: main  main.cpp  main.hpp  parse.cpp  parse.hpp
hw/02/: CMakeLists.txt
hw/02/include/MHD/: doprava.hpp  main.h  solution.h
hw/02/src/: doprava.cpp  main.cpp  solution.cpp
hw/02/temp/: doprava.cpp  doprava.hpp  main.cpp
hw/03/data/: out1
hw/03/template/: main  main.cpp  main.hpp
hw/04/: Makefile  main.cpp  matrix.hpp  matrix_exceptions.hpp  matrix_friends.hpp
hw/04/matrices/: matrix  out
